--- a/FolderBrowser/src/main/res/layout/folder_browser_layout.xml
+++ b/FolderBrowser/src/main/res/layout/folder_browser_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/ocean_blue"
+    android:background="@color/ocean_blue_background"
     tools:ignore="hardCodedText">
 
     <androidx.recyclerview.widget.RecyclerView
