--- a/FolderBrowser/src/main/res/layout/folder_browser_item.xml
+++ b/FolderBrowser/src/main/res/layout/folder_browser_item.xml
@@ -23,4 +23,11 @@
         android:gravity="center"
         android:layout_below="@id/image_view_for_inode_icon"/>
 
+    <TextView
+        android:id="@+id/text_view_for_inode_path"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:text="/"/>
+
 </RelativeLayout>
