--- a/FolderBrowser/src/main/res/layout/folder_browser_layout.xml
+++ b/FolderBrowser/src/main/res/layout/folder_browser_layout.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:text="/home"
         android:textColor="@android:color/white"
+        android:background="@color/ocean_blue_background"
         android:gravity="center"
         android:layout_alignParentBottom="true"/>
 
