--- a/FolderBrowser/src/main/res/layout/folder_browser_item.xml
+++ b/FolderBrowser/src/main/res/layout/folder_browser_item.xml
@@ -12,7 +12,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:src="@drawable/default_icon_for_directory"
-        android:tint="@color/ocean_blue_foreground"/>
+        android:tint="@android:color/transparent"/>
 
     <TextView
         android:id="@+id/text_view_for_inode_name"
