--- a/FolderBrowser/src/main/res/layout/folder_browser_layout.xml
+++ b/FolderBrowser/src/main/res/layout/folder_browser_layout.xml
@@ -24,8 +24,22 @@
         android:tint="@color/ocean_white_foreground"
         android:backgroundTint="@color/ocean_blue_foreground"
         android:layout_marginBottom="15dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="5dp"
         android:layout_above="@id/text_view_for_directory_path"
+        android:layout_alignParentStart="true"
+        tools:ignore="ContentDescription" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_view_for_select_file"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_baseline_done_24"
+        android:tint="@color/ocean_white_foreground"
+        android:backgroundTint="@color/green_foreground"
+        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="5dp"
+        android:layout_above="@id/text_view_for_directory_path"
+        android:layout_alignParentEnd="true"
         tools:ignore="ContentDescription" />
 
     <TextView
