--- a/FolderBrowser/src/main/res/values/colors.xml
+++ b/FolderBrowser/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="ocean_blue_background">#011A25</color>
     <color name="ocean_blue_foreground">#2F9DBE</color>
+    <color name="green_foreground">#39BE2F</color>
     <color name="ocean_gray_foreground">#CAD4D4</color>
     <color name="ocean_white_foreground">#FFFFFF</color>
 </resources>
