--- a/FolderBrowser/src/main/res/layout/folder_browser_layout.xml
+++ b/FolderBrowser/src/main/res/layout/folder_browser_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/ocean_blue_background"
@@ -10,11 +10,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_for_directory_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="4"
         tools:listitem="@layout/folder_browser_item"
-        android:layout_centerHorizontal="true"/>
+        android:layout_alignParentTop="true"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_view_for_previous_directory"
@@ -25,9 +25,9 @@
         android:backgroundTint="@color/ocean_blue_foreground"
         android:layout_marginBottom="15dp"
         android:layout_marginStart="5dp"
-        android:layout_above="@id/text_view_for_directory_path"
         android:layout_alignParentStart="true"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        android:layout_above="@id/text_view_for_directory_path"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_view_for_select_file"
@@ -38,19 +38,20 @@
         android:backgroundTint="@color/green_foreground"
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="5dp"
-        android:layout_above="@id/text_view_for_directory_path"
         android:layout_alignParentEnd="true"
-        tools:ignore="ContentDescription" />
+        android:layout_above="@id/text_view_for_directory_path"
+        tools:ignore="ContentDescription"/>
 
     <TextView
         android:id="@+id/text_view_for_directory_path"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:text="/"
+        android:textSize="20sp"
         android:textColor="@android:color/white"
         android:background="@color/ocean_blue_background"
-        android:gravity="center"
+        android:scrollHorizontally="true"
+        android:singleLine="true"
         android:layout_alignParentBottom="true"/>
-
 
 </RelativeLayout>
