--- a/FolderBrowser/src/main/res/layout/folder_browser_layout.xml
+++ b/FolderBrowser/src/main/res/layout/folder_browser_layout.xml
@@ -45,13 +45,10 @@
     <TextView
         android:id="@+id/text_view_for_directory_path"
         android:layout_width="match_parent"
-        android:layout_height="25dp"
+        android:layout_height="wrap_content"
         android:text="/"
-        android:textSize="20sp"
         android:textColor="@android:color/white"
         android:background="@color/ocean_blue_background"
-        android:scrollHorizontally="true"
-        android:singleLine="true"
         android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
